k8s/eks/twitter-backend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goapp
  labels:
    app: twitter
    type: backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: twitter
      type: backend
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  revisionHistoryLimit: 14
  template:
    metadata:
      name: goapp
      labels: 
        app: twitter
        type: backend
    spec:
      containers:
      - name: go
        image: 102665740320.dkr.ecr.ap-northeast-1.amazonaws.com/twitter-app:v1.0.2
        ports:
        - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: golang-svc
  labels:
    app: twitter
    type: backend
spec:
  selector:
    app: twitter # deploymentの特定
    type: backend # deploymentの特定
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 4000
    targetPort: 4000
