k8s/eks/twitter-db-storage.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-svc
  labels:
    app: twitter
    type: database
spec:
  ports:
  - port: 27017
    targetPort: 27017
  clusterIP: None
  selector:
    app: twitter
    type: database

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  labels:
    app: twitter
    type: database
spec:
  selector:
    matchLabels:
      app: twitter
      type: database
  serviceName: db-svc
  replicas: 3
  template:
    metadata:
      name: mongodb
      labels:
        app: twitter
        type: database
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: mongodb
        image: 102665740320.dkr.ecr.ap-northeast-1.amazonaws.com/twitter-db
        args:
        - "mongod"
        - "--auth"
        - "--clusterAuthMode=keyFile"
        - "--keyFile=/home/mongodb/keyfile"
        - "--replSet=rs0"
        - "--bind_ip_all"
        volumeMounts:
        - mountPath: "/data/db"
          name: storage
        - mountPath: "/home/mongodb"
          name: secret
      volumes:
      - name: secret
        secret:
          secretName: mongo-secret
          items:
          - key: keyfile
            path: keyfile
            mode: 0700
  volumeClaimTemplates:
  - metadata:
      name: storage
    spec:
      storageClassName: gp2
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 4Gi
