k8s/eks/twitter-nginx-react.yaml
# frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  labels:
    app: twitter
    tier: frontend
spec:
  selector:
    app: twitter # deploymentの特定
    tier: frontend # deploymentの特定
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: twitter
    tier: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: twitter
      tier: frontend
  template:
    metadata:
      labels:
        app: twitter
        tier: frontend
    spec:
      containers:
      - name: frontend
        image: 102665740320.dkr.ecr.ap-northeast-1.amazonaws.com/twitter-web:v1.1.5
        ports:
        - containerPort: 80
