k8s/eks/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: twitter
  namespace: default
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: web-svc
              servicePort: 80
            path: /
