k8s/eks/twitter-web-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: alb-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    external-dns.alpha.kubernetes.io/hostname: eks-twitter.net
spec:
  rules:
    # - host: eks-twitter.net
    - http:
        paths:
          - path: /*
            backend:
              serviceName: web-svc
              servicePort: 80
